--- a/PP.MAUI/PP.MAUI.csproj
+++ b/PP.MAUI/PP.MAUI.csproj
@@ -79,6 +79,9 @@
 	  <Compile Update="Views\EmployeeDetail.xaml.cs">
 	    <DependentUpon>EmployeeDetail.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Views\BillDetail.xaml.cs">
+	    <DependentUpon>BillDetail.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\TimerDetail.xaml.cs">
 	    <DependentUpon>TimerDetail.xaml</DependentUpon>
 	  </Compile>
@@ -110,6 +113,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\EmployeeDetail.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\BillDetail.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\TimerDetail.xaml">
